environments/dev/services/springcontainerms/base/config/service.yaml
---
# Source: springcontainerms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "spring-container-ms"
  labels:
    chart: "springcontainerms-1.0.0"
    app.kubernetes.io/part-of: refarch-kc
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    nodePort: 31900
  selector:
    app: "springcontainerms-selector"
