environments/dev/services/springcontainerms/base/config/route.yaml
---
# Source: springcontainerms/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  #TODO Add default name overrides?
  name: kcontainer-spring-container
  labels:
    chart: 'springcontainerms-1.0.0'
    app.kubernetes.io/part-of: refarch-kc
spec:
  path: /
  to:
    kind: Service
    name: "spring-container-ms"
    weight: 100
  port:
    targetPort: http
